[package]
name = "enc-dec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pbkdf2 = { version = "0.12.2",features = ["simple"]}
sha2 = "0.10.8"
aes-gcm = "0.10.3"
hex = "0.4.3"
rand = "0.8.5"
chrono = "0.4.31"
